==> ARMmbed/mbed-os/features/mbedtls/targets/TARGET_Cypress/TARGET_MXCRYPTO/aes_alt.c <==
#include "mbedtls/config.h"
#include MBEDTLS_CONFIG_FILE
#include <string.h>
#include "mbedtls/aes.h"
#include "mbedtls/platform.h"
#include "mbedtls/platform_util.h"
#define AES_VALIDATE_RET( cond )    \
    MBEDTLS_INTERNAL_VALIDATE_RET( cond, MBEDTLS_ERR_AES_BAD_INPUT_DATA )
#define AES_VALIDATE( cond )        \
    MBEDTLS_INTERNAL_VALIDATE( cond )
#include "crypto_common.h"
#include "cy_crypto_core.h"

void mbedtls_aes_free( mbedtls_aes_context *ctx )
{
    if( ctx == NULL )
        return;

    if (ctx->aes_state.buffers != NULL) {
        Cy_Crypto_Core_Aes_Free(ctx->obj.base, &ctx->aes_state);
    }
    cy_hw_crypto_release((cy_hw_crypto_t *)ctx);

    cy_hw_zeroize(ctx, sizeof( mbedtls_aes_context ) );
}

int mbedtls_aes_setkey_enc( mbedtls_aes_context *ctx, const unsigned char *key,
                    unsigned int keybits )
{
    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( key != NULL );

    return aes_set_keys( ctx, key, keybits );
}

int mbedtls_aes_setkey_dec( mbedtls_aes_context *ctx, const unsigned char *key,
                    unsigned int keybits )
{
    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( key != NULL );

    return aes_set_keys( ctx, key, keybits );
}

int mbedtls_internal_aes_encrypt( mbedtls_aes_context *ctx,
                                  const unsigned char input[16],
                                  unsigned char output[16] )
{
    int ret = 0;
    cy_en_crypto_status_t status;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( ctx->aes_state.buffers != NULL );

    status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_ENCRYPT, output, input, &ctx->aes_state);

    if (CY_CRYPTO_SUCCESS != status)
    {
        ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
    }

    return( ret );
}

int mbedtls_internal_aes_decrypt( mbedtls_aes_context *ctx,
                                  const unsigned char input[16],
                                  unsigned char output[16] )
{
    int ret = 0;
    cy_en_crypto_status_t status;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( ctx->aes_state.buffers != NULL );

    status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_DECRYPT, output, input, &ctx->aes_state);

    if (CY_CRYPTO_SUCCESS != status)
    {
        ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
    }

    return( ret );
}

int mbedtls_aes_crypt_cbc( mbedtls_aes_context *ctx,
                    int mode,
                    size_t length,
                    unsigned char iv[16],
                    const unsigned char *input,
                    unsigned char *output )
{
    unsigned char temp[CY_CRYPTO_AES_BLOCK_SIZE];

    int ret = 0;
    cy_en_crypto_status_t status;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( mode == MBEDTLS_AES_ENCRYPT ||
                      mode == MBEDTLS_AES_DECRYPT );
    AES_VALIDATE_RET( iv != NULL );
    AES_VALIDATE_RET( input != NULL );
    AES_VALIDATE_RET( output != NULL );

    if( length % CY_CRYPTO_AES_BLOCK_SIZE )
        return( MBEDTLS_ERR_AES_INVALID_INPUT_LENGTH );

    AES_VALIDATE_RET( ctx->aes_state.buffers != NULL);

    if( mode == MBEDTLS_AES_DECRYPT )
    {
        while(( length > 0 ) && (ret == 0))
        {
            Cy_Crypto_Core_MemCpy(ctx->obj.base, temp, input, CY_CRYPTO_AES_BLOCK_SIZE);

            status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_DECRYPT, output, input, &ctx->aes_state);

            Cy_Crypto_Core_MemXor(ctx->obj.base, output, output, iv, CY_CRYPTO_AES_BLOCK_SIZE);
            Cy_Crypto_Core_MemCpy(ctx->obj.base, iv, temp, CY_CRYPTO_AES_BLOCK_SIZE);

            input  += CY_CRYPTO_AES_BLOCK_SIZE;
            output += CY_CRYPTO_AES_BLOCK_SIZE;
            length -= CY_CRYPTO_AES_BLOCK_SIZE;

            if (CY_CRYPTO_SUCCESS != status)
            {
                ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
            }
        }
    }
    else
    {
        while(( length > 0 ) && (ret == 0))
        {
            Cy_Crypto_Core_MemXor(ctx->obj.base, output, input, iv, CY_CRYPTO_AES_BLOCK_SIZE);

            status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_ENCRYPT, output, output, &ctx->aes_state);

            Cy_Crypto_Core_MemCpy(ctx->obj.base, iv, output, CY_CRYPTO_AES_BLOCK_SIZE);

            input  += CY_CRYPTO_AES_BLOCK_SIZE;
            output += CY_CRYPTO_AES_BLOCK_SIZE;
            length -= CY_CRYPTO_AES_BLOCK_SIZE;

            if (CY_CRYPTO_SUCCESS != status)
            {
                ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
            }
        }
    }

    return( ret );
}
